--- a/themes/10up-theme/package.json
+++ b/themes/10up-theme/package.json
@@ -15,7 +15,12 @@
     "node": ">=12.0.0"
   },
   "devDependencies": {
-    "10up-toolkit": "^3.0.0"
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.5.0",
+    "@tailwindcss/line-clamp": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.2",
+    "10up-toolkit": "^3.0.0",
+    "tailwindcss": "^3.0.24"
   },
   "dependencies": {
     "normalize.css": "^8.0.1"
@@ -26,7 +31,6 @@
       "editor-style-overrides": "./assets/js/admin/editor-style-overrides.js",
       "blocks": "./includes/blocks/blocks.js",
       "frontend": "./assets/js/frontend/frontend.js",
-      "shared": "./assets/js/shared/shared.js",
       "styleguide": "./assets/js/styleguide/styleguide.js",
       "core-block-overrides": "./includes/core-block-overrides.js",
       "example-block": "./includes/blocks/example-block/index.js"
