Updated tailwind content pattern, added standard watch
Added watch task without hot reloading so hot reload is opt in only.

--- a/themes/10up-theme/package.json
+++ b/themes/10up-theme/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "npm run watch",
-    "watch": "10up-toolkit watch --port=5000 --hot",
+    "watch": "10up-toolkit watch",
+    "watch:hot": "10up-toolkit watch --port=5000 --hot",
     "build": "10up-toolkit build",
     "format-js": "10up-toolkit format-js",
     "lint-js": "10up-toolkit lint-js",
@@ -31,6 +32,7 @@
       "editor-style-overrides": "./assets/js/admin/editor-style-overrides.js",
       "blocks": "./includes/blocks/blocks.js",
       "frontend": "./assets/js/frontend/frontend.js",
+      "frontend-style": "./assets/css/style.css",
       "styleguide": "./assets/js/styleguide/styleguide.js",
       "core-block-overrides": "./includes/core-block-overrides.js",
       "example-block": "./includes/blocks/example-block/index.js"
